corregindo erros de potugues

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
            <input @focus="close" type="text" v-model="nome">
            <label for="">Digite sua altura</label>
            <input @focus="close" type="text" v-model="altura"/>
-           <label for="">Digite sua peso</label>
+           <label for="">Digite seu peso</label>
            <input  @focus="close" type="text" v-model="peso"/>
                <div class="message" v-if="mostrar">
                     <h3>Olá ,{{nome}} seu imc é {{imc}}</h3>
